package com.design.patterns.chapter29.enhanced;

/**
 * @author cjf on 2019/12/14 17:35
 */
public abstract class Product {

    /**
     * 被生产
     */
    public abstract void beProduced();

    /**
     * 被销售
     */
    public abstract void beSold();

}
